Update environment variables and server configuration

--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,12 +1,6 @@
-# Database configuration
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=brewry
-DB_USER=root
-DB_PASSWORD=
-
-# Server configuration
-PORT=5000
-
-# JWT configuration
-JWT_SECRET=your_secret_key
+PORT=4000
+HOST=localhost
+USER=root
+PASSWORD=
+DATABASE=brewry
+SECRET_KEY=NotSoSecretKeyIsit
