--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,6 +1,6 @@
 PORT=4000
 HOST=localhost
-USER=root
-PASSWORD=
-DATABASE=brewry
+USER=id21626221_root
+PASSWORD=Aman@123
+DATABASE=id21626221_brewry
 SECRET_KEY="NotSoSecretKeyIsit"
