--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,6 +1,13 @@
-PORT=4000
-HOST=localhost
-USER=id21626221_root
-PASSWORD=Aman@123
-DATABASE=id21626221_brewry
-SECRET_KEY="NotSoSecretKeyIsit"
+# PORT=4000
+# HOST=localhost
+# USER=id21626221_root
+# PASSWORD=Aman@123
+# DATABASE=id21626221_brewry
+# SECRET_KEY="NotSoSecretKeyIsit"
+#write config file so as it runs on brewry db over localhost from xampp server
+PORT = 4000;
+HOST = localhost
+USER = root
+PASSWORD = 
+DATABASE = brewry
+SECRET_KEY = "NotSoSecretKeyIsit"
